--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+
 body {
   font-family: "Poppins", sans-serif;
   background: #000000fb;
@@ -19,8 +22,113 @@ html {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 2rem;
   max-width: 90rem;
+}
+
+
+@media screen and (max-width: 850px) {
+
+  nav.navbar .container .nav-logo a {
+    font-size: 1.8rem !important;
+  }
+
+  section.home .container .left-col {
+    margin: 25vw 0 !important;
+  }
+
+  section.home .container .left-col .text-container p {
+    display: none;
+  }
+
+  section.home .container .left-col .text-container h2 {
+    font-size: 3rem !important;
+    text-align: center;
+  }
+
+  section.home .container .left-col .btn-container {
+    justify-content: center;
+  }
+
+  section.home .container .left-col .btn-container a {
+    padding: 0.8rem 1.1rem !important;
+  }
+
+  section.about .container .left-col .text-container h2 {
+    font-size: 3rem !important;
+    text-align: center;
+  }
+
+  section.about .container .left-col .text-container p {
+    font-size: 1.5rem !important;
+    color: #ffffff !important;
+  }
+
+  section.projects .container .left-col .text-container h2 {
+    font-size: 2.8rem !important;
+    text-align: center;
+  }
+
+  section.projects .container .left-col .card-grid {
+    justify-content: center;
+    flex-direction: column !important;
+    flex-wrap: nowrap !important;
+  }
+
+  section.projects .container .left-col .card-grid .card {
+    width: 100% !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-img-container img {
+    width: 100% !important;
+    height: auto !important;
+  }
+
+  section.contact .container {
+    flex-direction: column-reverse !important;
+  }
+
+  section.contact .container .right-col {
+    width: 100% !important;
+    margin: 8rem 0 !important;
+    padding: 1rem 0 !important;
+  }
+
+  section.contact .container .right-col .text-container h3 {
+    text-align: center;
+  }
+
+  section.contact .container .right-col .link-container {
+    text-align: center;
+  }
+
+  section.contact .container .left-col {
+    margin: 2rem 0 !important;
+    padding: 1rem 0 !important;
+  }
+
+  section.contact .container .left-col .text-container h2 {
+    font-size: 3rem !important;
+    text-align: center;
+  }
+
+  nav.navbar .container .nav-link {
+    display: none;
+  }
+
+  .nav-mobile-link {
+    display: block !important;
+  }
+
+  .container {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (max-width: 58rem) {
+  .work .container .left-col .card-grid .card {
+    width: 100% !important;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
