--- a/assets/css/scss/app.scss
+++ b/assets/css/scss/app.scss
@@ -1,18 +1,16 @@
-.navbar {
-  background: #000000fb;
-  z-index: 999;
+nav.navbar {
+  background: #000000f4;
   position: fixed;
   width: 100%;
   padding: 1rem 0;
   animation: fadeIn 1s ease-in;
   .container {
     animation: introLoad 0.7s ease-in;
-    align-items: center;
     .nav-logo {
       a {
-        color: #ffffff;
         font-size: 2rem;
         font-weight: normal;
+        color: #ffffff;
       }
     }
     .nav-link {
@@ -20,10 +18,10 @@
         list-style-type: none;
         a {
           text-transform: uppercase;
-          margin-right: 1.4rem;
+          margin-right: 1.5rem;
           font-size: 1.3rem;
-          color: #fff;
-          opacity: 0.7;
+          color: #ffffff;
+          opacity: 0.5;
           &:hover {
             opacity: 1;
           }
@@ -39,141 +37,139 @@
   }
 }
 
-.home {
-  width: 100%;
+section.resume {
+  a {
+    font-family: "Inter", "Poppins", sans-serif;
+    animation: swipeFromLeft 1.5s ease-in;
+    transition: 0.3s;
+    color: rgb(20, 20, 20);
+    border: solid 0.01rem #ffffff;
+    padding: 0.5rem 1.2rem;
+    font-size: 1.2rem;
+    background-color: white;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    margin-right: 0.5rem;
+    line-height: 4;
+  }
+  display: none;
+  max-width: 70%;
+  margin: 7rem auto;
+}
+
+section.home {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.6) 20%,
-      rgba(255, 255, 255, 0)
-    ),
-    url(/assets/images/bg2.jpg);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 30%, rgba(0, 0, 0, 0.1)), url(/assets/images/bg2.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: auto;
   .container {
-    align-items: center;
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 2rem 0;
-      margin: 12rem 0;
-      width: auto;
+      width: 50rem;
+      margin: 15vw 0rem;
+
       .text-container {
+        p {
+          margin: 1rem auto;
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 1.2rem;
+          color: #cfcfcf;
+          letter-spacing: 0.15rem;
+        }
         h2 {
-          font-size: clamp(1.5rem, 10vw, 3.6rem);
-          color: rgb(255, 255, 255);
-          line-height: 1.4;
+          margin: 3rem auto;
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 3.6rem;
+          color: rgb(240, 240, 240);
           font-weight: bold;
         }
       }
       .btn-container {
         display: flex;
-        flex-direction: column;
-        margin: 2rem 0;
+        flex-direction: row;
+        margin-top: 2rem;
         a {
-          transition: 0.3s;
-          color: rgb(207, 207, 207);
-          border: solid 0.01rem #8f8f8f;
-          padding: 0.5rem 1.2rem;
-          font-size: 1.2rem;
-          text-transform: uppercase;
-          letter-spacing: 0.5rem;
           margin-right: 0.5rem;
-          margin-top: 0.5rem;
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 1.2rem;
+          letter-spacing: 0.1rem;
+          transition: all 600ms ease-out;
+          border-radius: 0.2rem;
+
           &:hover {
-            color: rgb(255, 255, 255);
-            background: #000000fb;
-            transition: opacity 0.2s, border 0.3s;
+            transition: all 600ms ease-in;
           }
+
           &:nth-of-type(1) {
+            padding: 1.1rem 1.3rem;
             color: black;
+            border: solid 0.15rem rgb(249, 249, 249);
             background-color: rgb(255, 255, 255);
           }
+
+          &:nth-of-type(2) {
+            padding: 1rem 1.4rem;
+            color: white;
+            border: solid 0.15rem rgba(107, 107, 107, 0.6);
+            background-color: rgba(0, 0, 0, 0.5);
+          }
         }
       }
     }
   }
 }
 
-.about {
-  width: 100%;
+section.about {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.986) 20%,
-      rgba(0, 0, 0, 0.897)
-    ),
-    url(/assets/images/bg.jpg);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.986) 20%, rgba(0, 0, 0, 0.96)), url(/assets/images/bg.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: auto;
   .container {
-    align-items: center;
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 2rem 0;
-      margin: 6rem 0;
-      width: auto;
+      padding: 5rem 0;
+      width: 50rem;
+      margin: 5rem 0;
       .text-container {
-        h3 {
-          font-size: clamp(1.5rem, 10vw, 3.3rem);
-          color: rgb(255, 255, 255);
-          line-height: 1.4;
+        h2 {
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 3.6rem;
           font-weight: bold;
+          color: rgb(240, 240, 240);
         }
         p {
-          margin: 1rem 0;
-          font-size: clamp(1.5rem, 10vw, 1.6rem);
-          color: rgb(255, 255, 255);
-          line-height: 1.4;
-          font-weight: normal;
-        }
-      }
-      .img-container {
-        margin: 2rem 0;
-        i {
-          margin-left: 0.3rem;
-          margin-right: 2rem;
-          margin-top: 2rem;
-          color: white;
-          font-size: 3.5rem;
+          margin: 2.5rem auto;
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 2rem;
+          color: #dedede;
         }
       }
     }
   }
 }
 
-.work {
-  width: 100%;
+section.projects {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.586) 20%,
-      rgba(0, 0, 0, 0.697)
-    ),
-    url(/assets/images/bg3.jpg);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.986) 20%, rgba(0, 0, 0, 0.972)), url(/assets/images/bg.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: auto;
   .container {
-    align-items: center;
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 2rem 0;
-      margin: 6rem 0;
-      width: auto;
+      padding: 5rem 0;
+      margin: 5rem 0;
       .text-container {
-        h3 {
-          font-size: clamp(1.5rem, 10vw, 3.3rem);
-          color: rgb(255, 255, 255);
-          line-height: 1.4;
+        h2 {
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 3.4rem;
           font-weight: bold;
+          color: rgb(240, 240, 240);
         }
       }
       .card-grid {
@@ -181,14 +177,16 @@
         flex-direction: row;
         flex-wrap: wrap;
         .card {
-          width: 25rem;
-          height: auto;
-          margin-top: 3rem;
-          margin-right: 3rem;
-          background: rgba(33, 78, 95, 0.15);
+          background: rgba(22, 23, 25, 0.324);
+          width: 24rem;
+          margin-top: 4rem;
+          margin-right: 4rem;
           border-radius: 1rem;
           .card-img-container {
             img {
+              height: 14rem;
+              background-size: cover;
+              background-position: center;
               border-radius: 1rem;
               width: 100%;
             }
@@ -215,13 +213,19 @@
             align-items: center;
             padding: 1rem;
             a {
+              border-radius: 0.2rem;
               transition: 0.3s;
               color: rgb(207, 207, 207);
-              border: solid 0.01rem #8f8f8f;
+              border: solid 0.01rem #ffffff;
               padding: 0.5rem 1.2rem;
               font-size: 1.15rem;
               text-transform: capitalize;
               margin-right: 0.5rem;
+              &:nth-of-type(1) {
+                background-color: #ffffff;
+                padding: 0.6rem 1.3rem;
+                color: black;
+              }
               &:hover {
                 color: rgb(255, 255, 255);
                 background: #000000fb;
@@ -235,44 +239,36 @@
   }
 }
 
-.contact {
-  width: 100%;
+section.contact {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.986) 20%,
-      rgba(0, 0, 0, 0.897)
-    ),
-    url(/assets/images/bg.jpg);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.986) 20%, rgba(0, 0, 0, 0.897)), url(/assets/images/bg.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: auto;
   .container {
-    align-items: center;
+    justify-content: flex-start;
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 2rem 0;
-      margin: 6rem 0;
-      width: auto;
+      padding: 5rem 0;
+      margin: 5rem 0;
       .text-container {
-        h3 {
-          font-size: clamp(1.5rem, 10vw, 3.3rem);
-          color: rgb(255, 255, 255);
-          line-height: 1.4;
+        h2 {
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 3.6rem;
           font-weight: bold;
+          color: rgb(240, 240, 240);
         }
       }
       .form-container {
-        margin: 2rem auto;
+        margin-top: 2rem;
         animation: swipeFromRight 1s ease-out;
         .field {
           display: flex;
           flex-direction: column;
           label {
             color: white;
-            font-size: 1.5rem;
+            font-size: 2rem;
           }
           input {
             border: solid 0.01rem #474747;
@@ -311,71 +307,35 @@
             background: black;
           }
         }
-        .form-container-links {
-          display: flex;
-          justify-content: center;
-          a {
-            margin-left: 1rem;
-            text-align: center;
-            i {
-              margin: 1rem 0.8rem;
-              color: white;
-              font-size: 2.5rem;
-            }
+      }
+    }
+
+    .right-col {
+      width: 20rem;
+      animation: swipeFromLeft 0.7s ease-in;
+      padding: 10rem 2rem;
+      margin: 10rem 0;
+      .text-container {
+        h3 {
+          font-family: "Inter", "Poppins", sans-serif;
+          font-size: 3rem;
+          font-weight: bold;
+          color: rgb(240, 240, 240);
+        }
+      }
+      .link-container {
+        margin: 1rem 0.5rem;
+        a {
+          text-align: center;
+          i {
             color: white;
-            text-transform: uppercase;
-            margin-right: 1.5rem;
+            font-size: 3rem;
           }
+          color: white;
+          text-transform: uppercase;
+          margin-right: 1rem;
         }
       }
     }
   }
-}
-
-@media screen and (max-width: 43rem) {
-  .navbar {
-    padding: 1rem 0;
-  }
-  .navbar .container .nav-link {
-    display: none;
-  }
-  .home .container .left-col {
-    margin: 6rem 0;
-
-    .text-container {
-      h2 {
-        font-size: 2.3rem;
-      }
-    }
-  }
-  .container {
-    padding: 0 1rem;
-  }
-}
-
-@media screen and (max-width: 58rem) {
-  .work .container .left-col .card-grid .card {
-    width: 100% !important;
-  }
-}
-
-#resume-container {
-  a {
-    z-index: 2;
-    animation: swipeFromLeft 1.5s ease-in;
-    transition: 0.3s;
-    color: rgb(20, 20, 20);
-    border: solid 0.01rem #ffffff;
-    padding: 0.5rem 1.2rem;
-    font-size: 1.2rem;
-    background-color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.5rem;
-    margin-right: 0.5rem;
-    line-height: 4;
-  }
-
-  display: none;
-  max-width: 70%;
-  margin: 7rem auto;
 }
