--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-
 body {
-  font-family: "Poppins", sans-serif;
-  background: #000000fb;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.1)),
+    url(/assets/images/body.jpg);
+  background-size: cover;
 }
 
 html {
@@ -22,59 +23,174 @@ html {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 2rem;
-  max-width: 90rem;
+  padding: 0 2rem;
+  flex-wrap: wrap;
+
+  max-width: 80rem;
 }
 
-
-@media screen and (max-width: 850px) {
-
-  nav.navbar .container .nav-logo a {
-    font-size: 1.8rem !important;
-  }
-
+@media screen and (max-width: 768px) {
   section.home .container .left-col {
-    margin: 25vw 0 !important;
+    margin-top: 8em !important;
+    width: 100%;
   }
 
   section.home .container .left-col .text-container p {
-    display: none;
-  }
-
-  section.home .container .left-col .text-container h2 {
-    font-size: 3rem !important;
-    text-align: center;
-  }
-
-  section.home .container .left-col .btn-container {
-    justify-content: center;
+    font-size: clamp(.9rem, 5vw, 0.8rem) !important;
   }
 
   section.home .container .left-col .btn-container a {
-    padding: 0.8rem 1.1rem !important;
+    padding: 0.4rem 0.6rem !important;
   }
 
-  section.about .container .left-col .text-container h2 {
-    font-size: 3rem !important;
-    text-align: center;
+  section.about .container .left-col {
+    margin-top: 8em !important;
+    width: 100%;
   }
 
   section.about .container .left-col .text-container p {
-    font-size: 1.5rem !important;
-    color: #ffffff !important;
+    font-size: clamp(1.1rem, 5vw, 1rem) !important;
+  }
+
+  section.projects .container .left-col {
+    margin-top: 8em !important;
+    width: 100%;
+  }
+
+  section.projects .container .left-col .card-grid .card {
+    margin-top: 1rem !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-img-container img {
+    height: 9rem !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-text-container {
+    padding: 0.8rem !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-text-container h4 {
+    font-size: clamp(1.2rem, 5vw, 1rem) !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-text-container p {
+    font-size: clamp(.9rem, 5vw, 0.8rem) !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-btn-container {
+    padding: 0.8rem !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-btn-container a {
+    padding: 0.4rem 0.6rem !important;
+  }
+
+  section.contact .container .left-col {
+    margin-top: 8em !important;
+    width: 100%;
+  }
+
+  section.contact .container .left-col .text-container h3 {
+    margin-top: 1rem !important;
+  }
+
+  section.contact .container .left-col .form-container .flex .input-container input[type='submit'] {
+    padding: 0.4rem 0.6rem !important;
+    
+  }
+
+  nav.navbar .container .nav-link {
+    display: none !important;
+  }
+}
+
+/* @media screen and (max-width: 950px) {
+  .left-col {
+    margin-top: 8rem !important;
+  }
+
+  nav.navbar .container .nav-logo a {
+    font-size: 1.25rem !important;
+  }
+
+  nav.navbar .container .nav-link {
+    display: none !important;
+  }
+
+  section.home .container .left-col .text-container h2 {
+    font-size: 2rem !important;
+    font-weight: normal !important;
+  }
+
+  section.home .container .left-col .text-container p {
+    font-size: 1rem !important;
+  }
+
+  section.home .container .left-col .btn-container a {
+    padding: 0.7rem !important;
+  }
+
+  section.about .container .left-col .text-container h2 {
+    font-size: 2rem !important;
+    font-weight: normal !important;
+  }
+
+  section.about .container .left-col .text-container p {
+    font-size: 1.2rem !important;
   }
 
   section.projects .container .left-col .text-container h2 {
-    font-size: 2.8rem !important;
-    text-align: center;
+    font-size: 2rem !important;
+    font-weight: normal !important;
   }
 
   section.projects .container .left-col .card-grid {
     justify-content: center;
-    flex-direction: column !important;
-    flex-wrap: nowrap !important;
   }
 
+  section.projects .container .left-col .card-grid .card .card-text-container h4 {
+    font-size: 1.5rem !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-text-container p {
+    font-size: 1rem !important;
+  }
+
+  section.projects .container .left-col .card-grid .card .card-btn-container a {
+    font-size: 0.8rem !important;
+    padding: 0.4rem !important;
+  }
+
+  section.contact .container .left-col .text-container h2 {
+    font-size: 2rem !important;
+    font-weight: normal !important;
+  }
+
+  section.contact .container .left-col .text-container h3 {
+    font-size: 1rem !important;
+    font-weight: normal !important;
+  }
+
+  section.contact .container .left-col .form-container .flex {
+    gap: 1rem !important;
+  }
+
+  section.contact .container .left-col .form-container .flex .input-container input[type='submit'] {
+    padding: 0.8rem !important;
+    font-size: 0.7rem !important;
+    letter-spacing: 0.1rem !important;
+  }
+
+  section.contact .container .left-col .form-container .flex .link-container a i {
+    font-size: 2rem !important;
+  }
+
+  .container {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
   section.projects .container .left-col .card-grid .card {
     width: 100% !important;
   }
@@ -83,48 +199,4 @@ html {
     width: 100% !important;
     height: auto !important;
   }
-
-  section.contact .container {
-    flex-direction: column-reverse !important;
-  }
-
-  section.contact .container .right-col {
-    width: 100% !important;
-    margin: 8rem 0 !important;
-    padding: 1rem 0 !important;
-  }
-
-  section.contact .container .right-col .text-container h3 {
-    text-align: center;
-  }
-
-  section.contact .container .right-col .link-container {
-    text-align: center;
-  }
-
-  section.contact .container .left-col {
-    margin: 2rem 0 !important;
-    padding: 1rem 0 !important;
-  }
-
-  section.contact .container .left-col .text-container h2 {
-    font-size: 3rem !important;
-    text-align: center;
-  }
-
-  nav.navbar .container .nav-link {
-    display: none;
-  }
-
-  .container {
-    padding: 0 2rem;
-  }
-}
-
-@media screen and (max-width: 58rem) {
-  .work .container .left-col .card-grid .card {
-    width: 100% !important;
-  }
-}
-
-/*# sourceMappingURL=index.css.map */
+} */
