--- a/assets/css/scss/app.scss
+++ b/assets/css/scss/app.scss
@@ -1,25 +1,29 @@
 nav.navbar {
-  background: #000000f4;
+  background: #020a12f6;
   position: fixed;
   width: 100%;
-  padding: 1rem 0;
+  padding: 1.5rem 0;
   animation: fadeIn 1s ease-in;
   .container {
     animation: introLoad 0.7s ease-in;
     .nav-logo {
+      display: flex;
+      align-items: center;
       a {
-        font-size: 2rem;
+        font-size: clamp(1.5rem, 2vw, 1.8rem);
         font-weight: normal;
         color: #ffffff;
       }
     }
     .nav-link {
+      display: flex;
+      align-items: center;
       .nav-link-item {
         list-style-type: none;
         a {
           text-transform: uppercase;
-          margin-right: 1.5rem;
-          font-size: 1.3rem;
+          margin-right: 1.2rem;
+          font-size: clamp(1.2rem, 2vw, 1.3rem);
           color: #ffffff;
           opacity: 0.5;
           &:hover {
@@ -38,82 +42,78 @@ nav.navbar {
 }
 
 section.resume {
+  display: none;
+  margin: 1rem auto;
+  max-width: 80rem;
   a {
-    font-family: "Inter", "Poppins", sans-serif;
-    animation: swipeFromLeft 1.5s ease-in;
-    transition: 0.3s;
-    color: rgb(20, 20, 20);
-    border: solid 0.01rem #ffffff;
-    padding: 0.5rem 1.2rem;
-    font-size: 1.2rem;
-    background-color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-right: 0.5rem;
+    font-family: 'Inter', 'Poppins', sans-serif;
+    font-size: clamp(1.2rem, 2vw, 1.3rem);
+    font-weight: bold;
+    letter-spacing: 0.15rem;
+    border-radius: 0.2rem;
+    padding: 0.9rem 1.3rem;
+    color: #000000;
+    border: solid 0.15rem #ffffff;
+    background: #ffffff;
     line-height: 4;
   }
-  display: none;
-  max-width: 70%;
-  margin: 7rem auto;
 }
 
 section.home {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 30%, rgba(0, 0, 0, 0.1)), url(/assets/images/bg2.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   .container {
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      width: 50rem;
-      margin: 15vw 0rem;
+      width: 56rem;
+      margin-top: 24em;
 
       .text-container {
-        p {
-          margin: 1rem auto;
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 1.2rem;
-          color: #cfcfcf;
-          letter-spacing: 0.15rem;
-        }
         h2 {
-          margin: 3rem auto;
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 3.6rem;
-          color: rgb(240, 240, 240);
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1.5rem, 5vw, 4rem);
           font-weight: bold;
+          color: #f0f0f0;
+          line-height: 1.4;
+          margin: 1.5rem auto;
+        }
+        p {
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1.25rem, 5vw, 1rem);
+          font-weight: normal;
+          color: #c9c9c9;
+          letter-spacing: 0.1rem;
+          margin-left: 0.2rem;
         }
       }
       .btn-container {
         display: flex;
         flex-direction: row;
-        margin-top: 2rem;
+        flex-wrap: wrap;
+        gap: 0.5rem;
         a {
-          margin-right: 0.5rem;
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 1.2rem;
-          letter-spacing: 0.1rem;
-          transition: all 600ms ease-out;
+          transition: all 1s ease-in-out;
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(0.7rem, 2vw, 1.1rem);
+          letter-spacing: 0.15rem;
           border-radius: 0.2rem;
+          padding: 0.9rem 1.3rem;
 
           &:hover {
-            transition: all 600ms ease-in;
+            transition: all 0.8s ease-in-out;
+            border: solid 0.15rem #0e5e94 !important;
           }
 
           &:nth-of-type(1) {
-            padding: 1.1rem 1.3rem;
-            color: black;
-            border: solid 0.15rem rgb(249, 249, 249);
-            background-color: rgb(255, 255, 255);
+            color: #000000;
+            border: solid 0.15rem #ffffff;
+            background: #ffffff;
           }
 
           &:nth-of-type(2) {
-            padding: 1rem 1.4rem;
-            color: white;
-            border: solid 0.15rem rgba(107, 107, 107, 0.6);
-            background-color: rgba(0, 0, 0, 0.5);
+            color: #ffffff;
+            border: solid 0.15rem #6b6b6b99;
+            background: transparent;
           }
         }
       }
@@ -123,29 +123,26 @@ section.home {
 
 section.about {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.986) 20%, rgba(0, 0, 0, 0.96)), url(/assets/images/bg.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   .container {
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 5rem 0;
-      width: 50rem;
-      margin: 5rem 0;
+      width: 40rem;
+      margin-top: 23rem;
       .text-container {
         h2 {
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 3.6rem;
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1.5rem, 5vw, 3rem);
           font-weight: bold;
-          color: rgb(240, 240, 240);
+          color: #f0f0f0;
         }
         p {
-          margin: 2.5rem auto;
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 2rem;
-          color: #dedede;
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1.5rem, 5vw, 1rem);
+          font-weight: normal;
+          color: #ffffff;
+          margin-top: 2rem;
+          margin-left: 0.1rem;
         }
       }
     }
@@ -154,22 +151,17 @@ section.about {
 
 section.projects {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.986) 20%, rgba(0, 0, 0, 0.954)), url(/assets/images/bg.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   .container {
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 5rem 0;
-      margin: 5rem 0;
+      margin-top: 23rem;
       .text-container {
         h2 {
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 3.4rem;
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1.5rem, 5vw, 3rem);
           font-weight: bold;
-          color: rgb(240, 240, 240);
+          color: #f0f0f0;
         }
       }
       .card-grid {
@@ -177,59 +169,65 @@ section.projects {
         flex-direction: row;
         flex-wrap: wrap;
         .card {
-          background: rgba(22, 23, 25, 0.324);
-          width: 24rem;
-          margin-top: 4rem;
-          margin-right: 4rem;
-          border-radius: 1rem;
+          background: #06111d;
+          box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.3);
+          width: 22rem;
+          border-radius: 0.5rem;
+          margin-top: 2.5rem;
+          margin-right: 2.5rem;
           .card-img-container {
             img {
-              height: 14rem;
-              background-size: cover;
-              background-position: center;
-              border-radius: 1rem;
+              height: 12rem;
+              border-radius: 0.5rem;
               width: 100%;
             }
           }
           .card-text-container {
-            padding: 1rem;
+            padding: 1.5rem;
             h4 {
-              font-size: clamp(1.5rem, 10vw, 2rem);
-              color: rgb(255, 255, 255);
-              line-height: 1.4;
+              font-family: 'Inter', 'Poppins', sans-serif;
+              font-size: clamp(1.5rem, 5vw, 2rem);
               font-weight: bold;
+              color: #f0f0f0;
             }
             p {
-              margin: 1rem 0;
-              font-size: clamp(1rem, 10vw, 1.2rem);
-              color: rgb(255, 255, 255);
-              line-height: 1.4;
+              font-family: 'Inter', 'Poppins', sans-serif;
+              font-size: clamp(1.2rem, 5vw, 1rem);
               font-weight: normal;
+              color: #ffffff;
+              margin-top: 1rem;
             }
           }
           .card-btn-container {
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            padding: 1rem;
+            gap: 0.5rem;
+            padding: 1rem 1.5rem;
             a {
+              transition: all 1s ease-in-out;
+              font-family: 'Inter', 'Poppins', sans-serif;
+              font-size: clamp(0.7rem, 2vw, 1.1rem);
+              font-weight: normal;
+              text-transform: uppercase;
               border-radius: 0.2rem;
-              transition: 0.3s;
-              color: rgb(207, 207, 207);
-              border: solid 0.01rem #ffffff;
-              padding: 0.5rem 1.2rem;
-              font-size: 1.15rem;
-              text-transform: capitalize;
-              margin-right: 0.5rem;
-              &:nth-of-type(1) {
-                background-color: #ffffff;
-                padding: 0.6rem 1.3rem;
-                color: black;
-              }
+              padding: 0.7rem 1.1rem;
+
               &:hover {
-                color: rgb(255, 255, 255);
-                background: #000000fb;
-                transition: opacity 0.2s, border 0.3s;
+                transition: all 0.8s ease-in-out;
+                border: solid 0.15rem #0e5e94 !important;
+              }
+
+              &:nth-of-type(1) {
+                color: #000000;
+                border: solid 0.15rem #ffffff;
+                background: #ffffff;
+              }
+
+              &:nth-of-type(2) {
+                color: #ffffff;
+                border: solid 0.15rem #6b6b6b99;
+                background: transparent;
               }
             }
           }
@@ -241,99 +239,68 @@ section.projects {
 
 section.contact {
   animation: fadeIn 0.5s ease-in;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.986) 20%, rgba(0, 0, 0, 0.897)), url(/assets/images/bg.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   .container {
-    justify-content: flex-start;
     animation: fadeIn 1s ease-in;
     .left-col {
       animation: swipeFromLeft 0.7s ease-in;
-      padding: 5rem 0;
-      margin: 5rem 0;
+      margin-top: 23rem;
       .text-container {
+        width: 30rem;
         h2 {
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 3.6rem;
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1.5rem, 5vw, 3rem);
           font-weight: bold;
-          color: rgb(240, 240, 240);
+          color: #f0f0f0;
+        }
+        h3 {
+          margin-top: 2rem;
+          font-family: 'Inter', 'Poppins', sans-serif;
+          font-size: clamp(1rem, 5vw, 0.5rem);
+          font-weight: normal;
+          color: #f0f0f0;
         }
       }
       .form-container {
         margin-top: 2rem;
+        margin-bottom: 10rem;
         animation: swipeFromRight 1s ease-out;
-        .field {
+
+        .flex {
           display: flex;
-          flex-direction: column;
-          label {
-            color: white;
-            font-size: 2rem;
-          }
-          input {
-            border: solid 0.01rem #474747;
-            color: white;
-            background: transparent;
-            padding: 1rem;
-            font-size: 1.2rem;
-            margin: 1rem 0;
+          flex-wrap: wrap;
+          gap: 2rem;
+          .input-container {
+            input[type='submit'] {
+              border: none !important;
+              transition: all 1s ease-in-out;
+              font-family: 'Inter', 'Poppins', sans-serif;
+              font-size: clamp(0.7rem, 2vw, 1.1rem);
+              letter-spacing: 0.15rem;
+              border-radius: 0.2rem;
+              color: #000000;
+              border: solid 0.15rem #ffffff;
+              background: #ffffff;
+              padding: 1rem 2rem;
+              &:hover {
+                transition: all 0.8s ease-in-out;
+                color: #ffffff;
+                background: #040b13;
+                border: solid 0.15rem #6b6b6b99;
+              }
+            }
           }
 
-          textarea {
-            border: solid 0.01rem #474747;
-            color: white;
-            background: transparent;
-            padding: 1rem;
-            font-size: 1.2rem;
-            height: 10rem;
-            margin: 1rem 0;
+          .link-container {
+            overflow: hidden;
+            a {
+              i {
+                color: #ffffff;
+                font-size: clamp(2rem, 5vw, 4rem);
+              }
+              color: #ffffff;
+              margin-right: 1.2rem;
+            }
           }
-        }
-        #netlify {
-          margin: 2rem 0;
-        }
-        input[type="submit"] {
-          width: 100%;
-          padding: 0.8rem;
-          border: solid 0.01rem #474747;
-          text-transform: uppercase;
-          letter-spacing: 0.4rem;
-          transition: 0.5s;
-          color: black;
-          background: rgb(255, 255, 255);
-          &:hover {
-            transition: 0.5s;
-            color: #ffffff;
-            background: black;
-          }
-        }
-      }
-    }
-
-    .right-col {
-      width: 20rem;
-      animation: swipeFromLeft 0.7s ease-in;
-      padding: 10rem 2rem;
-      margin: 10rem 0;
-      .text-container {
-        h3 {
-          font-family: "Inter", "Poppins", sans-serif;
-          font-size: 3rem;
-          font-weight: bold;
-          color: rgb(240, 240, 240);
-        }
-      }
-      .link-container {
-        margin: 1rem 0.5rem;
-        a {
-          text-align: center;
-          i {
-            color: white;
-            font-size: 3rem;
-          }
-          color: white;
-          text-transform: uppercase;
-          margin-right: 1rem;
         }
       }
     }
