--- a/assets/css/scss/app.css
+++ b/assets/css/scss/app.css
@@ -317,10 +317,6 @@ section.contact .container .left-col {
   margin-top: 23rem;
 }
 
-section.contact .container .left-col .text-container {
-  width: 30rem;
-}
-
 section.contact .container .left-col .text-container h2 {
   font-family: 'Inter', 'Poppins', sans-serif;
   font-size: clamp(1.5rem, 5vw, 3rem);
@@ -331,7 +327,7 @@ section.contact .container .left-col .text-container h2 {
 section.contact .container .left-col .text-container h3 {
   margin-top: 2rem;
   font-family: 'Inter', 'Poppins', sans-serif;
-  font-size: clamp(1rem, 5vw, 0.5rem);
+  font-size: clamp(1.5rem, 5vw, 1rem);
   font-weight: normal;
   color: #f0f0f0;
 }
@@ -353,6 +349,7 @@ section.contact .container .left-col .form-container .flex {
 }
 
 section.contact .container .left-col .form-container .flex .input-container input[type='submit'] {
+  font-weight: bold;
   border: none !important;
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
