--- a/assets/css/scss/app.scss
+++ b/assets/css/scss/app.scss
@@ -245,7 +245,6 @@ section.contact {
       animation: swipeFromLeft 0.7s ease-in;
       margin-top: 23rem;
       .text-container {
-        width: 30rem;
         h2 {
           font-family: 'Inter', 'Poppins', sans-serif;
           font-size: clamp(1.5rem, 5vw, 3rem);
@@ -255,7 +254,7 @@ section.contact {
         h3 {
           margin-top: 2rem;
           font-family: 'Inter', 'Poppins', sans-serif;
-          font-size: clamp(1rem, 5vw, 0.5rem);
+          font-size: clamp(1.5rem, 5vw, 1rem);
           font-weight: normal;
           color: #f0f0f0;
         }
@@ -271,6 +270,7 @@ section.contact {
           gap: 2rem;
           .input-container {
             input[type='submit'] {
+              font-weight: bold;
               border: none !important;
               transition: all 1s ease-in-out;
               font-family: 'Inter', 'Poppins', sans-serif;
